added stats endpoiint for finding incomes, expenses and incomes - expenses for passed period

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -64,6 +64,10 @@
             <a href="/admin/add" class="btn btn-success" aria-current="page" th:text="#{add.reservation}">Add Reservation</a>
         </div>
 
+        <div class="col">
+            <a href="/admin/stats" class="btn btn-success" aria-current="page" th:text="#{stats}">Stats</a>
+        </div>
+
     </div>
 
 
