--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -13,47 +13,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="icon" type="images/x-icon" href="/images/home.icon.png" >
 
+    <th:block th:include="~{fragments/head}"></th:block>
+
+
 </head>
 
 <body>
-
-
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" href="/" th:text="#{home}">Home</a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav align-items-center">
-                <li class="nav-item me-3 d-flex align-items-center text-white">
-                    <i class="bi bi-telephone-fill me-2"></i>
-                    <span th:text="${ownerPhone}">088242422</span>
-                </li>
-                <li class="nav-item d-flex align-items-center text-white">
-                    <i class="bi bi-envelope-fill me-2"></i>
-                    <span th:text="${ownerEmail}">testmail@gmail.com</span>
-                </li>
-                <li class="nav-item dropdown ms-3">
-                    <button class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        🌐
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="?lang=bg">🇧🇬 Български</a></li>
-                        <li><a class="dropdown-item" href="?lang=ru">🇷🇺 Русский</a></li>
-                        <li><a class="dropdown-item" href="?lang=en">🇬🇧 English</a></li>
-                    </ul>
-                </li>
-
-            </ul>
-        </div>
-    </div>
-</nav>
-
 
 
 <section class="main-content container-fluid">
@@ -119,9 +84,8 @@
 
 
 <!-- Footer -->
-<footer class="footer bg-dark text-white text-center pt-3" style="position: fixed; bottom: 0; width: 100%;">
-    <div class="container">
-    </div>
+<footer>
+    <th:block th:include="~{fragments/footer}"></th:block>
 </footer>
 
 
