--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -12,63 +12,20 @@
     <link rel="stylesheet" href="/style/home.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="icon" type="images/x-icon" href="/images/service.icon.png" >
+
+    <th:block th:include="~{fragments/head}"></th:block>
+
 </head>
 
 <body class="body">
 
-
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" href="/" th:text="#{home}">Home</a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav align-items-center">
-                <li class="nav-item me-3 d-flex align-items-center text-white">
-                    <i class="bi bi-telephone-fill me-2"></i>
-                    <span th:text="${ownerPhone}">088242422</span>
-                </li>
-                <li class="nav-item d-flex align-items-center text-white">
-                    <i class="bi bi-envelope-fill me-2"></i>
-                    <span th:text="${ownerEmail}">testmail@gmail.com</span>
-                </li>
-
-            </ul>
-        </div>
-    </div>
-</nav>
+<header>
+    <th:block th:include="~{fragments/nav-bar}"></th:block>
+</header>
 
 
 <section class="main-content container-fluid pb-5">
 
-
-    <section class="content-top container-fluid">
-
-        <div class="header container-sm mt-3">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/" class="btn custom-btn " aria-current="page" th:text="#{about}">About</a>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/attractions" class="btn custom-btn" aria-current="page" th:text="#{attractions}">Attractions</a>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/location" class="btn custom-btn" aria-current="page" th:text="#{location}">Location</a>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/pricing" class="btn custom-btn" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/photos" class="btn custom-btn" aria-current="page" th:text="#{photos}">Photos</a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="about container-sm mt-3 mb-3">
 
@@ -103,9 +60,8 @@
 
 
 <!-- Footer -->
-<footer class="footer bg-dark text-white text-center pt-3" style="position: fixed; bottom: 0; width: 100%;">
-    <div class="container">
-    </div>
+<footer>
+    <th:block th:include="~{fragments/footer}"></th:block>
 </footer>
 
 <!-- Bootstrap JS and dependencies -->
